--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(images/profile.png);
+    background-image: url(Images/profile.png);
     background-position: left 30%;
     background-size: 35%;    
     background-repeat: no-repeat;
