--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(.Images/profile.png);
-    background-position: left 30%;
+    background-image: url(Images/combine\ 10.28.37\ PM.png);
+    background-position: left 0%;
     background-size: 35%;    
     background-repeat: no-repeat;
     /*TAKE PROFFESSIONAL PICTURE AND INSERT HERE*/
@@ -32,10 +32,13 @@ nav {
     flex-wrap: wrap;
 }
 
+
 .logo{
     position: relative;
+    left: 2000px;
+    bottom: 8000px;
     display: inline;
-    width: 500px;
+    width: 50px;
 }
 
 nav ul li {
@@ -67,7 +70,7 @@ nav ul li a:hover::after {
 }
 
 .header-text{
-    margin-top: 30%;
+    margin-top: 35%;
     font-size: 27px;
 }
 
@@ -84,20 +87,7 @@ nav ul li a:hover::after {
     text-decoration: none;
 }
 
-.header-text a::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #bf5700;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
-}
 
-.header-text a:hover::after{
-    width: 100%;
-}
 
 /* --------- about ----------- */
 #about {
@@ -112,17 +102,16 @@ nav ul li a:hover::after {
     justify-content: space-between;
     flex-wrap: wrap;
 }
-/*
+
 .about-col-1{
     flex-basis: 35%;
 }
 
-Uncomment when image has been inserted
 .about-col-1 img{
-    width: 100%;
+    width: 75%;
     border-radius: 15px;
 }
-*/
+
 .about-col-2 {
     flex-basis: 60%;
 }
@@ -328,8 +317,158 @@ form btn2{
 }
 
 /* ------------------- css for small screens ------------------ */
-@media only screen and (max-with: 600px) {
+    nav .fas{
+        display: none;
+    }
+
+@media only screen and (max-width: 600px) {
     /* when images are done, insert phone compatable images*/
+    .logo {
+        width: 1px;
+    }
+    #header{
+        width: 100%;
+        background-image: url(Images/combine.png);
+        background-position: left 0%;
+        background-size: 80% 50%;
+    }
+    .header-text {
+        margin-top: 130%;
+        font-size: 20px;
+    }
+    .header-text h1 {
+        margin-top: 5%;
+        font-size: 55px;
+    }
+    nav .fas{
+        display: block;
+        position: absolute;
+        top: 38px;
+        left: 345px;
+        font-size: 25px;
+    }
+
+    nav ul{
+        background-color: #bf5700;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul li a {
+        color: white;
+    }
+    nav ul .fas{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+        color: white;
+    }
+
+    #about{
+        margin-top: -20%;
+    }
+
+    .sub-title{
+        font-size: 45px;
+    }
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
+    .about-col-2{
+        margin-top: 0%;
+        font-size: 12px;
+    }
+    /* ----------------------------------------------------------------------- */
+    #resume {
+        width: 100%;
+        height: 100vh;
+        padding: 0px 0;
+        color: #000000;
+    }
+    .resume-col-1 {
+        flex-basis: 35%;
+    }
+    
+    .resume-col-1 a{
+        color: #bf5700;
+        font-size: xx-small;
+        text-decoration: underline;
+        position: absolute;
+    }
+    
+    .resume-col-2 {
+        flex-basis: 60%;
+        position: relative;
+        right: 100px;
+        top: 100px;
+    }
+    
+    .my-resume {
+        font-size: 30px;
+        font-weight: 600;
+        color: #000000;
+    }
+    
+    .tab-titles {
+        display: flex;
+        margin: 10px 0 4px;
+    }
+    
+    .tab-links {
+        margin-right: 10px;
+        font-size: 15px;
+        font-weight: 600;
+        position: relative;
+    }
+    .tab-links::after {
+        content: '';
+        width: 0;
+        height: 3px;
+        background: #ffffff;
+        position: absolute;
+        left: 0;
+        bottom: -8px;
+        transition: 0.5s;
+    }
+    .tab-links.active-link::after {
+        width: 0%;
+    }
+    .tab-contents ul li {
+        font-size: xx-small;
+        list-style: none;
+        margin: 10px 0;
+    }
+    .tab-contents ul li span {
+        color: #bf5700;
+        font-size: 12px;
+    }
+    .tab-contents ul li a {
+        color: grey;
+        font-size: 11px;
+        font-weight: 400;
+    }
+    .tab-contents {
+        display: none;
+    }
+    .tab-contents.active-tab{
+        display: block;
+    }
+    
+
 }
 
 #msg{
